{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 278,
  "lineage": "4f485fb1-5ed9-46dd-8b81-dbe1bc0aea29",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349613131333:vpc/vpc-0c509a3244a280e45",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e965faeab4dde95a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0de76ef1777bbbe6b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c509a3244a280e45",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-017f684349d85a8ca",
            "ipv6_cidr_block": "2406:da1a:851:c400::/56",
            "main_route_table_id": "rtb-087d5ceda4e734458",
            "owner_id": "349613131333"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:loadbalancer/app/roamrush-internal-alb-production/7ce3b502b6e8045d",
            "arn_suffix": "app/roamrush-internal-alb-production/7ce3b502b6e8045d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-roamrush-internal-alb-production-928980700.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:loadbalancer/app/roamrush-internal-alb-production/7ce3b502b6e8045d",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "roamrush-internal-alb-production",
            "preserve_host_header": false,
            "security_groups": [
              "sg-067463a54e538f6bf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013637d7a2a30ee3c"
              },
              {
                "subnet_id": "subnet-01a477a0a9212bcc0"
              },
              {
                "subnet_id": "subnet-0a0689b37c395fedd"
              }
            ],
            "subnets": [
              "subnet-013637d7a2a30ee3c",
              "subnet-01a477a0a9212bcc0",
              "subnet-0a0689b37c395fedd"
            ],
            "vpc_id": "vpc-0c509a3244a280e45",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal",
            "aws_security_group.alb_public",
            "aws_security_group.frontend_ecs",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:loadbalancer/app/roamrush-public-alb-production/bc80d651895c7b5c",
            "arn_suffix": "app/roamrush-public-alb-production/bc80d651895c7b5c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "roamrush-public-alb-production-1717726871.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:loadbalancer/app/roamrush-public-alb-production/bc80d651895c7b5c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "dualstack",
            "load_balancer_type": "application",
            "name": "roamrush-public-alb-production",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d075afdcca82b26f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013637d7a2a30ee3c"
              },
              {
                "subnet_id": "subnet-01a477a0a9212bcc0"
              },
              {
                "subnet_id": "subnet-0a0689b37c395fedd"
              }
            ],
            "subnets": [
              "subnet-013637d7a2a30ee3c",
              "subnet-01a477a0a9212bcc0",
              "subnet-0a0689b37c395fedd"
            ],
            "vpc_id": "vpc-0c509a3244a280e45",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_public",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:listener/app/roamrush-internal-alb-production/7ce3b502b6e8045d/a52bae91b910a3d7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:targetgroup/roamrush-backend-tg-production/6e1e87cdb084b157",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:listener/app/roamrush-internal-alb-production/7ce3b502b6e8045d/a52bae91b910a3d7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:loadbalancer/app/roamrush-internal-alb-production/7ce3b502b6e8045d",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_target_group.backend",
            "aws_security_group.alb_internal",
            "aws_security_group.alb_public",
            "aws_security_group.frontend_ecs",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:listener/app/roamrush-public-alb-production/bc80d651895c7b5c/95dd62166a6bccd0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:targetgroup/roamrush-frontend-tg-production/c81460efaadeda8e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:listener/app/roamrush-public-alb-production/bc80d651895c7b5c/95dd62166a6bccd0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:loadbalancer/app/roamrush-public-alb-production/bc80d651895c7b5c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.public",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb_public",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:targetgroup/roamrush-backend-tg-production/6e1e87cdb084b157",
            "arn_suffix": "targetgroup/roamrush-backend-tg-production/6e1e87cdb084b157",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:targetgroup/roamrush-backend-tg-production/6e1e87cdb084b157",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:349613131333:loadbalancer/app/roamrush-internal-alb-production/7ce3b502b6e8045d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "roamrush-backend-tg-production",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c509a3244a280e45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:targetgroup/roamrush-frontend-tg-production/c81460efaadeda8e",
            "arn_suffix": "targetgroup/roamrush-frontend-tg-production/c81460efaadeda8e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:349613131333:targetgroup/roamrush-frontend-tg-production/c81460efaadeda8e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:349613131333:loadbalancer/app/roamrush-public-alb-production/bc80d651895c7b5c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "roamrush-frontend-tg-production",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c509a3244a280e45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349613131333:security-group/sg-067463a54e538f6bf",
            "description": "Allows traffic from frontend to backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067463a54e538f6bf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-007ca772b94bbf48c"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "roamrush-alb-internal-sg-production",
            "name_prefix": "",
            "owner_id": "349613131333",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c509a3244a280e45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_public",
            "aws_security_group.frontend_ecs",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349613131333:security-group/sg-0d075afdcca82b26f",
            "description": "Allows HTTP traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d075afdcca82b26f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "roamrush-alb-public-sg-production",
            "name_prefix": "",
            "owner_id": "349613131333",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c509a3244a280e45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349613131333:security-group/sg-033a5498ed633c4be",
            "description": "Allows traffic from internal ALB to backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033a5498ed633c4be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-067463a54e538f6bf"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "roamrush-backend-ecs-sg-production",
            "name_prefix": "",
            "owner_id": "349613131333",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c509a3244a280e45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal",
            "aws_security_group.alb_public",
            "aws_security_group.frontend_ecs",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349613131333:security-group/sg-0f2bbfde84787733f",
            "description": "Allows traffic from backend to databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2bbfde84787733f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033a5498ed633c4be"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033a5498ed633c4be"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "roamrush-database-sg-production",
            "name_prefix": "",
            "owner_id": "349613131333",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c509a3244a280e45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal",
            "aws_security_group.alb_public",
            "aws_security_group.backend_ecs",
            "aws_security_group.frontend_ecs",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349613131333:security-group/sg-007ca772b94bbf48c",
            "description": "Allows traffic from public ALB to frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007ca772b94bbf48c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d075afdcca82b26f"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "roamrush-frontend-ecs-sg-production",
            "name_prefix": "",
            "owner_id": "349613131333",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c509a3244a280e45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_public",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secrets_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349613131333:vpc-endpoint/vpce-0bb33eb5475082094",
            "dns_entry": [
              {
                "dns_name": "vpce-0bb33eb5475082094-66udxt3r.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0bb33eb5475082094-66udxt3r-ap-south-1c.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0bb33eb5475082094-66udxt3r-ap-south-1b.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0bb33eb5475082094-66udxt3r-ap-south-1a.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bb33eb5475082094",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08199315537ea608f",
              "eni-0c439ba248d789b22",
              "eni-0c790faeacae6922d"
            ],
            "owner_id": "349613131333",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-033a5498ed633c4be"
            ],
            "service_name": "com.amazonaws.ap-south-1.secretsmanager",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.0.166",
                "subnet_id": "subnet-0a0689b37c395fedd"
              },
              {
                "ipv4": "172.31.31.252",
                "subnet_id": "subnet-01a477a0a9212bcc0"
              },
              {
                "ipv4": "172.31.33.174",
                "subnet_id": "subnet-013637d7a2a30ee3c"
              }
            ],
            "subnet_ids": [
              "subnet-013637d7a2a30ee3c",
              "subnet-01a477a0a9212bcc0",
              "subnet-0a0689b37c395fedd"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c509a3244a280e45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_internal",
            "aws_security_group.alb_public",
            "aws_security_group.backend_ecs",
            "aws_security_group.frontend_ecs",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}